# AttercopEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
App/: CMakeLists.txt
App/src/: Application.cpp  Logger.cpp  SimpleMeshParser.cpp  main.cpp
Attercop/: CMakeLists.txt
Attercop/src/: Application.cpp  InternalConsoleSink.cpp  Logger.cpp  SimpleMeshParser.cpp
cmake/: CopyData.cmake
examples/: CMakeLists.txt  HelloTriangle.cpp
include/: Application.hpp  Attercop.hpp  Debug.hpp  InternalConsoleSink.hpp  Logger.hpp  Profiler.hpp  SimpleMeshParser.hpp  Uniforms.hpp  WGPUNameHelpers.hpp
resources/: shader.wgsl  simple_mesh.txt
tests/: CMakeLists.txt  CoreTests.cpp
